// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultiSelect/> tests should work when no matching results found: Filtered Menu 1`] = `
<div>
  <div
    class="bp4-popover-wrapper main bp4-fill"
  >
    <div
      aria-haspopup="true"
      class="bp4-popover-target bp4-popover-open"
    >
      <div
        class=""
      >
        <div
          class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
        >
          <div
            class="bp4-tag-input-values"
          >
            <input
              class="bp4-input-ghost bp4-multi-select-tag-input-input"
              placeholder="- Select -"
              value="junk"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open bp4-overlay-inline"
    >
      <div
        class="bp4-transition-container bp4-popover-appear bp4-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp4-popover bp4-minimal bp4-multi-select-popover popover"
        >
          <div
            class="bp4-popover-content"
          >
            <div>
              <ul
                class="bp4-menu"
                role="listbox"
              >
                <li
                  class="menuItem disabled"
                >
                  No matching results found
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data 1`] = `
<div>
  <div
    class="bp4-popover-wrapper main bp4-fill"
  >
    <div
      aria-haspopup="true"
      class="bp4-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp4-input bp4-tag-input bp4-multi-select"
        >
          <div
            class="bp4-tag-input-values"
          >
            <input
              class="bp4-input-ghost bp4-multi-select-tag-input-input"
              placeholder="- Select -"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with async data: Loading state 1`] = `
<div>
  <div
    class="bp4-popover-wrapper main bp4-fill"
  >
    <div
      aria-haspopup="true"
      class="bp4-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
        >
          <div
            class="bp4-tag-input-values"
          >
            <input
              class="bp4-input-ghost bp4-multi-select-tag-input-input"
              placeholder="- Select -"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with filtering: Filtered Menu 1`] = `
<div>
  <div
    class="bp4-popover-wrapper main bp4-fill"
  >
    <div
      aria-haspopup="true"
      class="bp4-popover-target bp4-popover-open"
    >
      <div
        class=""
      >
        <div
          class="bp4-input bp4-tag-input bp4-active bp4-multi-select"
        >
          <div
            class="bp4-tag-input-values"
          >
            <input
              class="bp4-input-ghost bp4-multi-select-tag-input-input"
              placeholder="- Select -"
              value="cha"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open bp4-overlay-inline"
    >
      <div
        class="bp4-transition-container bp4-popover-appear bp4-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp4-popover bp4-minimal bp4-multi-select-popover popover"
        >
          <div
            class="bp4-popover-content"
          >
            <div>
              <ul
                class="bp4-menu"
                role="listbox"
              >
                <li
                  class="menuItem active"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="004"
                  />
                  <p
                    class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmander
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="005"
                  />
                  <p
                    class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charmeleon
                  </p>
                </li>
                <li
                  class="menuItem"
                >
                  <input
                    class="checkbox"
                    readonly=""
                    type="checkbox"
                    value="006"
                  />
                  <p
                    class="StyledProps--font lineclamp StyledProps--main menuItemLabel"
                    style="--text-line-clamp: 1;"
                  >
                    Charizard
                  </p>
                </li>
                <button
                  aria-label="cha"
                  class="bp4-button bp4-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp4-button-text"
                  >
                    cha
                  </span>
                </button>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MultiSelect/> tests works with static data 1`] = `
<div>
  <div
    class="bp4-popover-wrapper main bp4-fill"
  >
    <div
      aria-haspopup="true"
      class="bp4-popover-target"
    >
      <div
        class=""
      >
        <div
          class="bp4-input bp4-tag-input bp4-multi-select"
        >
          <div
            class="bp4-tag-input-values"
          >
            <input
              class="bp4-input-ghost bp4-multi-select-tag-input-input"
              placeholder="- Select -"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
